# inference_ml

./: LICENSE  Makefile  README.md  pyproject.toml
app/: run.py
app/api/: prediction.py
app/config/: .env  config.py
app/schema/: schema.py
app/services/: model_inference.py
